# p3-forge

./: .envrc  .gitignore  .pre-commit-config.yaml  Makefile  README.md  VERSIONING.md  cliff.toml  devbox.json  renovate.json5
.github/: CODEOWNERS
.github/workflows/: build-containerdisk.yml  cleanup-dev-builds.yml  dev-build.yml  dispatch-sandbox-vm-build.yml  pr-checks.yml  release-build.yml  repo-maintenance.yml  sandbox-build.yml  update-alpine-containerdisk.yml
images/alpine-containerdisk/: Dockerfile
images/p3-distribution/: CHANGELOG.md  Dockerfile
images/p3-kubectl/: CHANGELOG.md  Dockerfile
images/p3-sandbox-browser/: CHANGELOG.md  Dockerfile
images/p3-sandbox-credential-refresher/: CHANGELOG.md  Dockerfile  README.md
images/p3-sandbox-ide/: CHANGELOG.md  Dockerfile  README.md  code-server.yaml  (+2 more)
images/p3-sandbox-instructions-generator/: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  entrypoint.sh  pyproject.toml  test-failure.sh  test.sh
images/p3-sandbox-instructions-generator/mkdocs/: mkdocs.yaml
images/p3-sandbox-instructions-generator/mkdocs/docs/: index.md
images/p3-sandbox-instructions-generator/mkdocs/docs/javascripts/: external-links.js  inline-code-copy.js
images/p3-sandbox-instructions-generator/mkdocs/docs/stylesheets/: extra-multipage.css  extra.css  inline-code-copy.css
images/p3-sandbox-instructions-generator/test/: instructions.md
sandbox/: README.md
scripts/: bash-completion  bash_completion  build-dev-image.sh  create-release.sh  create-tag.sh  init-image.sh  sandbox-ui-test.sh  setup-completion.sh
(+109 files in other folders)
